change to separate js file with data

--- a/chrome/content/papermachines/processors/templates/extract.html
+++ b/chrome/content/papermachines/processors/templates/extract.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Extracting: COLLECTION_NAME</title>
+    <script type="text/javascript" src="DATA_PATH"></script>
 </head>
 <body>
 <div>
