--- a/chrome/content/papermachines/processors/templates/geoparser_flightpaths.html
+++ b/chrome/content/papermachines/processors/templates/geoparser_flightpaths.html
@@ -8,21 +8,22 @@
     <script type="text/javascript" src="support/colorbrewer.js"></script>
     <link type="text/css" rel="text/stylesheet" href="support/button.css"/>
     <link type="text/css" rel="text/stylesheet" href="support/flightpaths.css"/>
+    <script type="text/javascript" src="DATA_PATH"></script>
   </head>
   <body>
     <div id="body">
       <div id="searches"><label for="searchTime" value="Time:"><input type="range" id="searchTime"/></label><span id="timeDisplay"></div></div>
     </div>
     <script type="text/javascript">
-    var linksByYear = LINKS_BY_YEAR;
-    var placeIDsToCoords = PLACEIDSTOCOORDS;
-    var placeIDsToNames = PLACEIDSTONAMES;
-    var placesMentioned = PLACESMENTIONED;
-    var textsFromPlace = TEXTSFROMPLACE;
-    var countries = COUNTRIES;
-    var max_country_weight = MAX_COUNTRY_WEIGHT;
-    var startDate = STARTDATE;
-    var endDate = ENDDATE;
+    var linksByYear = data["LINKS_BY_YEAR"];
+    var placeIDsToCoords = data["PLACEIDSTOCOORDS"];
+    var placeIDsToNames = data["PLACEIDSTONAMES"];
+    var placesMentioned = data["PLACESMENTIONED"];
+    var textsFromPlace = data["TEXTSFROMPLACE"];
+    var countries = data["COUNTRIES"];
+    var max_country_weight = data["MAX_COUNTRY_WEIGHT"];
+    var startDate = data["STARTDATE"];
+    var endDate = data["ENDDATE"];
     </script>
     <script type="text/javascript" src="support/flightpaths.js"></script>
     <script type="text/javascript">
