--- a/chrome/content/papermachines/processors/templates/ngrams.html
+++ b/chrome/content/papermachines/processors/templates/ngrams.html
@@ -33,11 +33,11 @@
 	</style>
     <script type="text/javascript" src="support/d3.js"></script>
 	<script type="text/javascript">
-	var data = NGRAMS_INTERVALS;
-	var times = TIMES;
-	var maxFreq = MAX_FREQ;
-	var ngramsToDocs = NGRAMS_TO_DOCS;
-	var docMetadata = DOC_METADATA;
+	var ngrams_intervals = data["NGRAMS_INTERVALS"];
+	var times = data["TIMES"];
+	var maxFreq = data["MAX_FREQ"];
+	var ngramsToDocs = data["NGRAMS_TO_DOCS"];
+	var docMetadata = data["DOC_METADATA"];
 	</script>
 </head>
 <body>
