--- a/chrome/content/papermachines/processors/templates/phrasenet.html
+++ b/chrome/content/papermachines/processors/templates/phrasenet.html
@@ -4,6 +4,8 @@
   <title>Phrase Net: COLLECTION_NAME</title>
   <script src="support/d3.js"></script>
   <script src="support/d3.layout.cloud.js"></script>
+  <script type="text/javascript" src="DATA_PATH"></script>
+
 <style type="text/css">
 body {
   font: 12pt sans-serif;
