--- a/chrome/content/papermachines/processors/templates/geoparser_export.html
+++ b/chrome/content/papermachines/processors/templates/geoparser_export.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Export Geodata: COLLECTION_NAME</title>
+    <script type="text/javascript" src="DATA_PATH"></script>
 </head>
 <body>
 <div>The CSV file may be found at the following path: CSVPATH</div>
