--- a/chrome/content/papermachines/processors/templates/mallet_lda.html
+++ b/chrome/content/papermachines/processors/templates/mallet_lda.html
@@ -8,18 +8,7 @@
     <script type="text/javascript" src="support/d3.layout.cloud.js"></script>
     <link type="text/css" rel="stylesheet" href="support/stream.css"/>
 
-    <script type="text/javascript">
-    var data = TOPICS_DOCS;
-    var docMetadata = DOC_METADATA;
-    var labels = TOPIC_LABELS;
-    var topicCoherence = TOPIC_COHERENCE;
-    var topicCorrelations = TOPIC_CORRELATIONS;
-    var topicStdevs = TOPIC_STDEVS;
-    var topicProportions = TOPIC_PROPORTIONS;
-    var categorical = CATEGORICAL;
-    var index = ###INDEX###;
-    var tags = TAGS;
-    </script>
+    <script type="text/javascript" src="DATA_PATH"></script>
     <link type="text/css" rel="stylesheet" href="support/button.css"/>
   </head>
   <body>
