--- a/chrome/content/papermachines/processors/templates/wordcloud_multiple.html
+++ b/chrome/content/papermachines/processors/templates/wordcloud_multiple.html
@@ -5,17 +5,18 @@
   <title>Multiple Word Clouds: COLLECTION_NAME</title>
   <script src="support/d3.js"></script>
   <script src="support/d3.layout.cloud.js"></script>
+  <script type="text/javascript" src="DATA_PATH"></script>
 </head>
 <body>
 <script>
-var fontSize = d3.scale.log().range(FONTSIZE);
+var fontSize = d3.scale.log().range(data["FONTSIZE"]);
 
 var color = d3.scale.category10().domain(d3.range(10));
 
-var width = WIDTH, height = HEIGHT;
+var width = data["WIDTH"], height = data["HEIGHT"];
 
-var clouds = CLOUDS;
-var order = ORDER;
+var clouds = data["CLOUDS"];
+var order = data["ORDER"];
 var cloudVis = {};
 
 for (var i in order) {
