summing of segments

--- a/chrome/content/papermachines/processors/templates/ngrams.html
+++ b/chrome/content/papermachines/processors/templates/ngrams.html
@@ -31,6 +31,7 @@
 		  stroke: #000;
 		}
 	</style>
+	<script type="text/javascript" src="DATA_PATH"></script>
     <script type="text/javascript" src="support/d3.js"></script>
 	<script type="text/javascript">
 	var ngrams_intervals = data["NGRAMS_INTERVALS"];
