--- a/chrome/content/papermachines/processors/templates/geoparser_flightpaths_gmaps.html
+++ b/chrome/content/papermachines/processors/templates/geoparser_flightpaths_gmaps.html
@@ -5,8 +5,8 @@
     <title>Geoparser: COLLECTION_NAME</title>
     <script type="text/javascript" src="support/html5slider.js"></script>
     <script type="text/javascript" src="DATA_PATH"></script>
-    <link type="text/css" rel="text/stylesheet" href="support/button.css"/>
-    <link type="text/css" rel="text/stylesheet" href="support/flightpaths.css"/>
+    <link type="text/css" rel="stylesheet" href="support/button.css"/>
+    <link type="text/css" rel="stylesheet" href="support/flightpaths.css"/>
     <script type="text/javascript" src="support/d3.js"></script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
   </head>
