--- a/chrome/content/papermachines/processors/templates/geoparser_flightpaths.html
+++ b/chrome/content/papermachines/processors/templates/geoparser_flightpaths.html
@@ -3,32 +3,29 @@
   <head>
   <meta charset="UTF-8" />
     <title>Geoparser: COLLECTION_NAME</title>
-    <script type="text/javascript" src="support/d3.js"></script>
     <script type="text/javascript" src="support/html5slider.js"></script>
-    <script type="text/javascript" src="support/colorbrewer.js"></script>
-    <link type="text/css" rel="text/stylesheet" href="support/button.css"/>
-    <link type="text/css" rel="text/stylesheet" href="support/flightpaths.css"/>
     <script type="text/javascript" src="DATA_PATH"></script>
+    <link type="text/css" rel="stylesheet" href="support/button.css"/>
+    <link type="text/css" rel="stylesheet" href="support/flightpaths.css"/>
+    <script type="text/javascript" src="support/d3.js"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
   </head>
   <body>
     <div id="body">
-      <div id="searches"><label for="searchTime" value="Time:"><input type="range" id="searchTime"/></label><span id="timeDisplay"></div></div>
+      <div id="main">
+        <div id="searches"><label for="searchTime" value="Time:"><input type="range" id="searchTime"/></label><span id="timeDisplay"></div>
+        <h1>Flight Paths: COLLECTION_NAME</h1>
+        <div id="heatmapArea">
+        
+        </div>
+
+        <div id="configArea">
+          <div id="togLegend" class="btn">Toggle Legend</div>
+        </div>
+        
+      </div>
     </div>
-    <script type="text/javascript">
-    var linksByYear = data["LINKS_BY_YEAR"];
-    var placeIDsToCoords = data["PLACEIDSTOCOORDS"];
-    var placeIDsToNames = data["PLACEIDSTONAMES"];
-    var placesMentioned = data["PLACESMENTIONED"];
-    var textsFromPlace = data["TEXTSFROMPLACE"];
-    var countries = data["COUNTRIES"];
-    var max_country_weight = data["MAX_COUNTRY_WEIGHT"];
-    var startDate = data["STARTDATE"];
-    var endDate = data["ENDDATE"];
-    </script>
-    <script type="text/javascript" src="support/flightpaths.js"></script>
-    <script type="text/javascript">
-      window.onload = function () { generateSearch(); };
-    </script>
+  <script type="text/javascript" src="support/flightpaths.js"> </script>
   </body>
 </html>
 
