--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     
     <script type="application/javascript">
     <!--
-    var pmhash = "sha1:80feeb96cff72345aebfb73433c87a5f1cd61baa";
+    var pmhash = "sha1:a68cd9b62e8b8b50cac95b73c8712ef1e90a5fcb";
     function install (aEvent)
     {
       var params = {
@@ -42,7 +42,7 @@
         <p>A Zotero extension for analysis and visualization in the digital humanities.</p>
         <p class="view"><a href="http://github.com/chrisjr/papermachines">View the Project on GitHub <small>chrisjr/papermachines</small></a></p>
         <ul>
-          <li onclick="return install(event);"><a onclick="return install(event);" href="https://github.com/downloads/chrisjr/papermachines/papermachines-0.3.6.xpi">Install <strong>Extension</strong></a></li>
+          <li onclick="return install(event);"><a onclick="return install(event);" href="http://www.papermachines.org/download/papermachines-0.4.0.xpi">Install <strong>Extension</strong></a></li>
           <li><a href="examples.html">View <strong>Examples</strong></a></li>
           <li><a href="http://github.com/chrisjr/papermachines">Fork on <strong>GitHub</strong></a></li>
         </ul>
