--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     
     <script type="application/javascript">
     <!--
-    var pmhash = "sha1:a68cd9b62e8b8b50cac95b73c8712ef1e90a5fcb";
+    var pmhash = "sha1:";
     function install (aEvent)
     {
       var params = {
