--- a/chrome/content/papermachines/processors/templates/geoparser_export.html
+++ b/chrome/content/papermachines/processors/templates/geoparser_export.html
@@ -8,7 +8,7 @@
 <body>
 <p id="path"></p>
 <script>
-    var p = document.getElementById("extracted");
+    var p = document.getElementById("path");
     p.textContent = "The CSV file may be found at the following path: " + data["CSVPATH"];
 </script>
 </body>
