--- a/chrome/content/papermachines/processors/templates/geoparser_heatmap.html
+++ b/chrome/content/papermachines/processors/templates/geoparser_heatmap.html
@@ -4,6 +4,7 @@
 <title>Heatmap: COLLECTION_NAME</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="support/heatmap.css"/>
+    <script type="text/javascript" src="DATA_PATH"></script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
 </head>
@@ -11,7 +12,6 @@
 <div id="main">
 			<h1>Heatmap: COLLECTION_NAME</h1>
 			<div id="heatmapArea">
-			
 			</div>
 
 			<div id="configArea">
@@ -21,48 +21,5 @@
 </div>
 <script type="text/javascript" src="support/heatmap.js"></script>
 <script type="text/javascript" src="support/heatmap-gmaps.js"></script>
-<script type="text/javascript">
-
-var map;
-var heatmap; 
-
-window.onload = function(){
-
-	var myLatlng = new google.maps.LatLng(-15.6778, -47.4384);
-	var myOptions = {
-	  zoom: 2,
-	  minZoom: 2,
-	  center: myLatlng,
-	  mapTypeId: google.maps.MapTypeId.ROADMAP,
-	  disableDefaultUI: false,
-	  scrollwheel: true,
-	  draggable: true,
-	  navigationControl: true,
-	  mapTypeControl: false,
-	  scaleControl: true,
-	  disableDoubleClickZoom: false
-	};
-	map = new google.maps.Map(document.getElementById("heatmapArea"), myOptions);
-	
-	heatmap = new HeatmapOverlay(map, {"radius":15, "visible":true, "opacity":60, "legend": {
-                            "title": "Mentions in Corpus",
-                            "position": "br",
-                            "offset": 30
-                        }});
-	
-	document.getElementById("togLegend").onclick = function(){
-		var legend = heatmap.heatmap.get("legend").get("element");
-		legend.hidden = !legend.hidden;
-	};
-
-    var myData = INTENSITY;
-	
-	// this is important, because if you set the data set too early, the latlng/pixel projection doesn't work
-	google.maps.event.addListenerOnce(map, "idle", function(){
-		heatmap.setDataSet(myData);
-	});
-};
-
-</script>
 </body>
 </html>
