--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     
     <script type="application/javascript">
     <!--
-    var pmhash = "sha1:";
+    var pmhash = "sha1:071c4dfed0701c43f5e687bfa9e7665c2202a18c";
     function install (aEvent)
     {
       var params = {
@@ -42,7 +42,7 @@
         <p>A Zotero extension for analysis and visualization in the digital humanities.</p>
         <p class="view"><a href="http://github.com/chrisjr/papermachines">View the Project on GitHub <small>chrisjr/papermachines</small></a></p>
         <ul>
-          <li onclick="return install(event);"><a onclick="return install(event);" href="http://www.papermachines.org/download/papermachines-0.4.0.xpi">Install <strong>Extension</strong></a></li>
+          <li onclick="return install(event);"><a onclick="return install(event);" href="http://www.papermachines.org/download/papermachines-0.4.1.xpi">Install <strong>Extension</strong></a></li>
           <li><a href="examples.html">View <strong>Examples</strong></a></li>
           <li><a href="http://github.com/chrisjr/papermachines">Fork on <strong>GitHub</strong></a></li>
         </ul>
