typos in mallet and extract.html

--- a/chrome/content/papermachines/processors/templates/extract.html
+++ b/chrome/content/papermachines/processors/templates/extract.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="DATA_PATH"></script>
 </head>
 <body>
-<p id="extracted"></div>
+<p id="extracted"></p>
 <div>
 	<p>If this is the first extraction completed on your machine, you may need to restart Firefox/Zotero Standalone (and/or click on a different collection from the one you extracted, then on the original one) for the visualization tools to become accessible.</p>
 	<br/>
