--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     
     <script type="application/javascript">
     <!--
-    var pmhash = "sha1:bfe55dcc7499d172beddfb6d551321021d606124";
+    var pmhash = "sha1:f32e7eacf784e7b55f0b82fa5a08f463da17a7c0";
     function install (aEvent)
     {
       var params = {
@@ -40,18 +40,18 @@
       <header>
         <h1>Paper Machines</h1>
         <p>A Zotero extension for analysis and visualization in the digital humanities.</p>
-        <p class="view"><a href="http://github.com/chrisjr/papermachines">View the Project on GitHub <small>chrisjr/papermachines</small></a></p>
+        <p class="view"><a href="http://github.com/papermachines/papermachines">View the Project on GitHub <small>papermachines/papermachines</small></a></p>
         <ul>
-          <li onclick="return install(event);"><a onclick="return install(event);" href="http://www.papermachines.org/download/papermachines-0.4.10.xpi">Install <strong>Extension</strong></a></li>
+          <li onclick="return install(event);"><a onclick="return install(event);" href="http://www.papermachines.org/download/paper_machines-0.4.10-fx.xpi">Install <strong>Extension</strong></a></li>
           <li><a href="examples.html">View <strong>Examples</strong></a></li>
-          <li><a href="http://github.com/chrisjr/papermachines">Fork on <strong>GitHub</strong></a></li>
+          <li><a href="http://github.com/papermachines/papermachines">Fork on <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
       {{ content }}
       </section>
       <footer>
-        <p>This project is maintained by <a href="http://github.com/chrisjr">Chris Johnson-Roberson</a></p>
+        <p>This project is maintained by <a href="http://github.com/corajr">Cora Johnson-Roberson</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
